fixed the cut off dropdown

--- a/src/styles.css
+++ b/src/styles.css
@@ -69,11 +69,11 @@ select {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 1000; /* Ensure it stays above other content */
+  z-index: 1000; 
   background-color: var(--base-light);
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-  display: flex; /* Use flexbox for layout */
-  align-items: center; /* Center vertically */
+  display: flex; 
+  align-items: center;
   padding: 10px 20px;
   margin: 5px 20px 20px 20px;
   max-height: 8rem;
@@ -82,9 +82,9 @@ select {
 
 /* Hero image styles */
 .heroimg {
-  max-height: 7rem; /* Adjust height to fit nicely */
-  width: auto; /* Maintain aspect ratio */
-  margin-right: 20px; /* Add space between the image and other content */
+  max-height: 7rem;
+  width: auto;
+  margin-right: 20px;
   border: 2px, solid var(--secondarybrand)
 }
 
@@ -127,11 +127,12 @@ select {
 
   /* Dropdown container */
 .dropdown {
-    position: fixed; /* Fix position at the top right */
-    top: 10px;       /* Adjust this value to control vertical positioning */
-    right: 10px;     /* Adjust this value to control horizontal positioning */
-    z-index: 1000;   /* Ensure it's above other content */
+    position: fixed;
+    top: 10px;
+    right: 10px;   
+    z-index: 1000;   
     font-family: Arial, sans-serif;
+    right: calc(10px + 5vw);
   }
   
   /* Dropdown button */
